--- a/RBF/RBF_Network.ipynb
+++ b/RBF/RBF_Network.ipynb
@@ -83,13 +83,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VHWuP3AXjvq1"
+        "id": "VHWuP3AXjvq1",
+        "outputId": "bc384018-22cc-490a-ec62-9d55e61eb73b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!git clone https://github.com/valmirf/redes_neurais_lc.git"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'redes_neurais_lc'...\n",
+            "remote: Enumerating objects: 54, done.\u001b[K\n",
+            "remote: Counting objects: 100% (54/54), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (50/50), done.\u001b[K\n",
+            "remote: Total 54 (delta 6), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (54/54), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -117,7 +134,7 @@
         "  stds = np.repeat(dMax / np.sqrt(2 * k), k)\n",
         "  return stds"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -150,7 +167,7 @@
         "class RBFNet(object):\n",
         "    \"\"\"Implementation of a Radial Basis Function Network\"\"\"\n",
         "\n",
-        "    def __init__(self, k=3, attnumber=13, lr=0.01, epochs=100, rbf=rbfGaussiana, computeStds=computeEqualStds):\n",
+        "    def __init__(self, k=4, attnumber=18, lr=0.01, epochs=100, rbf=rbfGaussiana, computeStds=computeEqualStds):\n",
         "        self.k = k  # grupos ou numero de neuronios na camada escondida\n",
         "        self.lr = lr # taxa de aprendizagem\n",
         "        self.epochs = epochs  # número de iterações\n",
@@ -209,7 +226,7 @@
         "\n",
         "        return np.array(y_pred)\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -230,7 +247,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "P75CdFJ4W7mU"
+        "id": "P75CdFJ4W7mU",
+        "outputId": "21447b92-7277-4c19-bfaa-7e11e324ed5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Neste código vou utilizar o pandas, framework amplamente utilizado pra lidar com dados\n",
@@ -240,7 +261,7 @@
         "\n",
         "#carrega a base de dados e retorna conjuntos de treinamento e teste\n",
         "def load_data():\n",
-        "    url = 'redes_neurais_lc/RBF/wine.csv'\n",
+        "    url = 'redes_neurais_lc/RBF/vehicle.csv'\n",
         "    df = pd.read_csv(url)\n",
         "    #remove a ultima coluna (dados)\n",
         "    data = df[df.columns[:-1]]\n",
@@ -262,7 +283,7 @@
         "training_labels_transformed = le.transform(training_labels.values)\n",
         "\n",
         "#chama RBF\n",
-        "rbfnet = RBFNet(lr=1e-2, attnumber=13, k=3, computeStds=computeEqualStds)\n",
+        "rbfnet = RBFNet(lr=1e-2, attnumber=18, k=4, computeStds=computeEqualStds)\n",
         "rbfnet.fit(training_inputs.values, training_labels_transformed)\n",
         "\n",
         "#transforma rótulos do conjunto de teste em numeros pra calculo do erro\n",
@@ -276,8 +297,16 @@
         "\n",
         "print('error: ', np.sum(errorabs)/len(test_labels_transformed))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "error:  0.9408284023668639\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
