--- a/RBF/RBF_Network.ipynb
+++ b/RBF/RBF_Network.ipynb
@@ -84,25 +84,20 @@
       "cell_type": "code",
       "metadata": {
         "id": "VHWuP3AXjvq1",
-        "outputId": "bc384018-22cc-490a-ec62-9d55e61eb73b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9708f2e3-8a9e-46a2-b6c7-f74094c2d673"
       },
       "source": [
         "!git clone https://github.com/valmirf/redes_neurais_lc.git"
       ],
-      "execution_count": 1,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'redes_neurais_lc'...\n",
-            "remote: Enumerating objects: 54, done.\u001b[K\n",
-            "remote: Counting objects: 100% (54/54), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (50/50), done.\u001b[K\n",
-            "remote: Total 54 (delta 6), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (54/54), done.\n"
+            "fatal: destination path 'redes_neurais_lc' already exists and is not an empty directory.\n"
           ],
           "name": "stdout"
         }
@@ -125,16 +120,17 @@
       "source": [
         "#função de base radial gaussiana\n",
         "def rbfGaussiana(x, c, s):\n",
-        "    return np.exp(-1 / (2 * s**2) * (x-c)**2)\n",
+        "    return np.exp(-((x-c)**2)/(2 * s**2))\n",
         "\n",
         "#função de cálculo da largura do campo receptivo em que se repete o mesmo valor pra todos os neurônios\n",
         "def computeEqualStds(centers,k):\n",
         "  dist = [np.sqrt(np.sum((c1 - c2) ** 2)) for c1 in centers for c2 in centers]\n",
         "  dMax = np.max(dist)\n",
         "  stds = np.repeat(dMax / np.sqrt(2 * k), k)\n",
-        "  return stds"
+        "  return stds\n",
+        "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -174,6 +170,7 @@
         "        self.rbf = rbf # função de base radial\n",
         "        self.computeStds = computeStds  #função de cálculo da largura do campo receptivo\n",
         "\n",
+        "\n",
         "        self.w = np.random.randn(self.k,attnumber)\n",
         "        self.b = np.random.randn(1)\n",
         "\n",
@@ -200,7 +197,8 @@
         "                F = phi.T.dot(self.w)\n",
         "                F = np.sum(F) + self.b\n",
         "                #saída da rede\n",
-        "                out = 0 if F < 0 else 1\n",
+        "                out = self.sigmoid(F)\n",
+        "                out = 0 if out < 0.5 else 1\n",
         "                \n",
         "                #função de perda \n",
         "                loss = (y[i] - out).flatten() ** 2\n",
@@ -220,13 +218,20 @@
         "        for i in range(X.shape[0]):\n",
         "            a = np.array([self.rbf(X[i], c, s) for c, s, in zip(self.centers, self.stds)])\n",
         "            F = a.T.dot(self.w)\n",
+        "            #print('F: ' + str(F))\n",
         "            F = np.sum(F) + self.b\n",
-        "            out = 0 if F < 0 else 1\n",
+        "            #print('F2: ' + str(F))\n",
+        "            out = self.sigmoid(F)\n",
+        "            out = 0 if out < 0.5 else 1\n",
         "            y_pred.append(out)\n",
         "\n",
-        "        return np.array(y_pred)\n"
+        "        return np.array(y_pred)\n",
+        "\n",
+        "    # Função de Ativação Sigmóide\n",
+        "    def sigmoid(self, net):\n",
+        "      return 1.0/(1.0+np.exp(-net))\n"
       ],
-      "execution_count": 3,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -248,10 +253,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "P75CdFJ4W7mU",
-        "outputId": "21447b92-7277-4c19-bfaa-7e11e324ed5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e0486dac-2a4f-4ba9-9638-3663ba789896"
       },
       "source": [
         "# Neste código vou utilizar o pandas, framework amplamente utilizado pra lidar com dados\n",
@@ -261,7 +266,7 @@
         "\n",
         "#carrega a base de dados e retorna conjuntos de treinamento e teste\n",
         "def load_data():\n",
-        "    url = 'redes_neurais_lc/RBF/vehicle.csv'\n",
+        "    url = 'redes_neurais_lc/RBF/sonar.csv'\n",
         "    df = pd.read_csv(url)\n",
         "    #remove a ultima coluna (dados)\n",
         "    data = df[df.columns[:-1]]\n",
@@ -283,7 +288,7 @@
         "training_labels_transformed = le.transform(training_labels.values)\n",
         "\n",
         "#chama RBF\n",
-        "rbfnet = RBFNet(lr=1e-2, attnumber=18, k=4, computeStds=computeEqualStds)\n",
+        "rbfnet = RBFNet(lr=1e-2, attnumber=60, k=2, computeStds=computeEqualStds)\n",
         "rbfnet.fit(training_inputs.values, training_labels_transformed)\n",
         "\n",
         "#transforma rótulos do conjunto de teste em numeros pra calculo do erro\n",
@@ -292,17 +297,18 @@
         "test_labels_transformed = le.transform(test_labels.values)\n",
         "\n",
         "y_pred = rbfnet.predict(test_labels_transformed)\n",
-        "\n",
         "errorabs = abs(test_labels_transformed-y_pred)\n",
         "\n",
-        "print('error: ', np.sum(errorabs)/len(test_labels_transformed))"
+        "print('error: ' + str(np.sum(errorabs)) + '/' + str(len(test_labels_transformed))) \n",
+        "print('error: ', np.sum(errorabs)/len(test_labels_transformed)*100)"
       ],
-      "execution_count": 5,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "error:  0.9408284023668639\n"
+            "error: 22/42\n",
+            "error:  52.38095238095239\n"
           ],
           "name": "stdout"
         }
