--- a/MLP/Otimizacao.ipynb
+++ b/MLP/Otimizacao.ipynb
@@ -304,11 +304,13 @@
         "\n",
         "A partir dos melhores resultados obtidos no projeto anterior, execute 3 configurações pra cada questão a seguir:\n",
         "\n",
-        "1) Implementar as regularizações L1 e L2\n",
+        "1) Explicite as configurações utilizadas\n",
         "\n",
-        "2) Implementar o Momento\n",
+        "2) Implementar as regularizações L1 e L2\n",
         "\n",
-        "3) Comparar os experimentos e explicar o porque de cada resultado? Qual foi a melhor regularização? Por quê? O Momento melhorou os resultados? Por quê? \n",
+        "3) Implementar o Momento\n",
+        "\n",
+        "4) Comparar os experimentos e explicar o porque de cada resultado? Qual foi a melhor regularização? Por quê? O Momento melhorou os resultados? Por quê? \n",
         "     \n",
         "      \n",
         "Complete a Tabela abaixo com os resultados \n",
