--- a/RBF/RBF_Network.ipynb
+++ b/RBF/RBF_Network.ipynb
@@ -87,17 +87,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9708f2e3-8a9e-46a2-b6c7-f74094c2d673"
+        "outputId": "f253425c-80a0-4f36-e608-d4b6fa0b85b2"
       },
       "source": [
-        "!git clone https://github.com/valmirf/redes_neurais_lc.git"
+        "!git clone https://github.com/valmirf/redes_neurais_bcc.git"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'redes_neurais_lc' already exists and is not an empty directory.\n"
+            "fatal: destination path 'redes_neurais_bcc' already exists and is not an empty directory.\n"
           ],
           "name": "stdout"
         }
@@ -130,7 +130,7 @@
         "  return stds\n",
         "\n"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -231,7 +231,7 @@
         "    def sigmoid(self, net):\n",
         "      return 1.0/(1.0+np.exp(-net))\n"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e0486dac-2a4f-4ba9-9638-3663ba789896"
+        "outputId": "4c4a3a0f-f5a0-4206-d2b3-70aa4fe0eed5"
       },
       "source": [
         "# Neste código vou utilizar o pandas, framework amplamente utilizado pra lidar com dados\n",
@@ -266,7 +266,7 @@
         "\n",
         "#carrega a base de dados e retorna conjuntos de treinamento e teste\n",
         "def load_data():\n",
-        "    url = 'redes_neurais_lc/RBF/sonar.csv'\n",
+        "    url = 'redes_neurais_bcc/RBF/sonar.csv'\n",
         "    df = pd.read_csv(url)\n",
         "    #remove a ultima coluna (dados)\n",
         "    data = df[df.columns[:-1]]\n",
@@ -302,13 +302,13 @@
         "print('error: ' + str(np.sum(errorabs)) + '/' + str(len(test_labels_transformed))) \n",
         "print('error: ', np.sum(errorabs)/len(test_labels_transformed)*100)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "error: 22/42\n",
-            "error:  52.38095238095239\n"
+            "error: 0/137\n",
+            "error:  0.0\n"
           ],
           "name": "stdout"
         }
@@ -329,7 +329,7 @@
         "id": "kOrl4i0areNo"
       },
       "source": [
-        "Utilizando o código acima, modifique a última seção (Executando com Base de Dados) para que ele seja executado com a base de dados do arquivo iris.csv. Depois, modifique a função de base radial implementada (Gaussiana), para a Multiquadrática e a Multiquadrática Inversa e calcule a taxa de erro.\n",
+        "Utilizando o código acima, modifique a última seção (Executando com Base de Dados) para que ele seja executado com a base de dados do arquivo iris.csv.\n",
         "\n",
         "\n",
         "1- Calcular a quantidade de neurônios escondidos:\n",
@@ -346,8 +346,7 @@
         "\n",
         "2- Utilizando a melhor configuração da questão anterior, calcular a taxa de erro usando uma das outras maneiras de retorno da largura do campo receptivo da função de base radial. Altere o código de forma que cada neurônio possua sua própria largura.\n",
         "\n",
-        "\n",
-        "3- Calcule agora a taxa de erro com a configuração da questão anterior utilizando a função de base radial Multiquadrática Inversa:\n",
+        "3- Modifique a função de base radial implementada (Gaussiana), para a Multiquadrática inversa e calcule a taxa de erro para as configurações das questões anteriores. \n",
         "\n",
         "\n",
         "Qual foi a melhor configuração?"
